# vcpkg-dcmtk

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  app.cxx  foo.cxx  public.h  vcpkg.json
.github/workflows/: ci.yaml
dependencies/: CMakeLists.txt
patch/: 3rdparty.cmake  dcmtkPrepare.cmake
