# configure dcmtk options:
set(DCMTK_WITH_ZLIB ON) # zlib is used by PNG anyway
set(DCMTK_WITH_PNG ON)

set(BUILD_APPS OFF)
set(DCMTK_ENABLE_STL ON)
set(USE_COMPILER_HIDDEN_VISIBILITY ON)
set(DCMTK_WITH_DOXYGEN OFF)
set(DCMTK_ENABLE_MANPAGES OFF)
set(BUILD_SHARED_LIBS OFF)

set(DCMTK_ENABLE_PRIVATE_TAGS ON)
set(DCMTK_USE_DCMDICTPATH OFF)

set(DCMTK_WITH_ICU OFF)
set(DCMTK_WITH_ICONV OFF)
set(DCMTK_WITH_STDLIBC_ICONV OFF)

# set(WIDE_CHAR_FILE_IO_FUNCTIONS ON)
set(DCMTK_WIDE_CHAR_FILE_IO_FUNCTIONS ON)

set(DCMTK_ENABLE_CXX11 ON)

# build DCMTK
add_subdirectory(dcmtk)
